style.css
:root {
    --text-background: white;
    --background: #f6f8f9;
    --line: #444851;
    --button-editorial: #47ADF1;
    --button-q1: #9C72E4;
    --button-mobile: #F29E33;
    --button-website: #D863A1;
    --button-sale: #B0C926;
    --green: #64C0A9;
    --red: #FB3F36;
    --light-grey: #D0D5D9;
}

body {
    background-color: var(--background);
    margin: 0;
}

.bg-text {
    background-color: var(--text-background);
    padding: 1rem;
}

h1 {
    font-family: sans-serif;
    font-size: 2rem;
    font-weight: bold;
    display: inline;
    
}

.container {
    margin: 3rem 10rem 1rem 10rem;
    padding: 50px;
    background-color: white;
    border-radius: 5px;
}

#first-container {
    margin: 3rem 10rem 1rem 10rem;
    padding: 1rem 50px 0.5rem 50px;
    background-color: white;
    border-radius: 5px;
    margin-bottom: 0px;
}

.menu-container {
    margin: 3rem 10rem 1rem 10rem;
    padding: 1rem 50px 0.5rem 50px;
    background-color: white;
    border-radius: 5px;
    margin-top: 0px;
}
/* button */

#task-button {
    background-color: var(--button-editorial);
    color: white;
    border-radius: 5px;
    border-color: white;
    padding: 10px;
    font-size: 0.8rem;
    font-weight: 600;
    border-style: none;
}

#section-button {
    background-color: white;
    color: var(--light-grey);
    border-radius: 5px;
    border-color: var(--light-grey);
    padding: 10px;
    font-size: 0.8rem;
    font-weight: 600;
    border-style: solid;
}

.categories-button {
    color: white;
    border-style: none;
    border-radius: 30px;
    padding: 10px;
    font-size: 10px;
}

#editorial {
    background-color: var(--button-editorial);
}

#Q1 {
    background-color: var(--button-q1);
}

#recruiting {
    background-color: var(--green);
}

#mobile {
    background-color: var(--button-mobile);
}

#web {
    background-color: var(--button-website);
}

#sales {
    background-color: var(--button-sale);
}

/* HR */

hr {
    background-color: var(--light-grey);
    padding: 0px;
    margin-left: 10rem;
    margin-right: 10rem;
    margin-top: 0px;
    margin-bottom: 0px;
}

section {
    margin-top: 0px;
    margin-bottom: 30px;
}



.titles {
    color: var(--line);
    font-family: sans-serif;
    margin-top: 30px;
    margin-bottom: 10px;
}

.check {
    padding: 1px;
    border-color: #64C0A9;
    border-radius: 50%;
    border-style: solid;
    background-color: white;
    color: #64C0A9;
    height:20px ;
    width: 20px;
    margin-top: 10px;
    margin-bottom: 10px;
}

.cross {
    padding: 1px;
    border-color: #FB3F36;
    border-radius: 50%;
    border-style: solid;
    background-color: white;
    color: #FB3F36;
    height:20px ;
    width: 20px;
    margin-top: 10px;
    margin-bottom: 10px;
    
}

.description {
    font-family: sans-serif;
    color: var(--line);
}

